trunk/Plugins/TeamCity/fluentbuild-runner/fluentbuild-runner-test/testData/plugins/fluentbuildRunner/app_rspec/spec/statistics/compile_error/error2_spec.rb
# @author: Roman Chernyatchik
require "spec"

describe "Compilation" do

  # Called before each example.
  before(:each) do
    $
  end

  # Called after each example.
  after(:each) do
    # Do nothing
  end

  it "should fail in before" do
    true.should == true
  end
end